# plutus-MiMC

./: .gitignore  README.md  cabal.project
nix/: shell.nix
plutus-mimc/: plutus-mimc.cabal
plutus-mimc/bench/: Main.hs
plutus-mimc/bench/Bls/: Run.hs  Scripts.hs
plutus-mimc/src/Plutus/Crypto/: BlsUtils.hs  MiMC.hs
