cabal-version: 3.0
name:          plutus-mimc
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:      "A plutus implementation of the mimc sponge function"
build-type:    Simple

library
  exposed-modules:
    Plutus.Crypto.BlsUtils
    Plutus.Crypto.MiMC

  -- Plutus.Crypto.MiMC
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base >=4.9 && <5
    , plutus-core
    , plutus-tx

test-suite bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  exposed-modules:
    Bls.RunBls
    Bls.Scripts

  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , base >=4.9 && <5
    , bytestring
    , hedgehog
    , plutus-benchmark:plutus-benchmark-common
    , plutus-core
    , plutus-mimc
    , plutus-tx
    , plutus-tx-plugin
